cmake_minimum_required(VERSION 3.16)

add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(functionsOverload)
add_subdirectory(arrays_pointers)
add_subdirectory(threads)
add_subdirectory(matrixProject)
add_subdirectory(firstClasses)
add_subdirectory(struct)