cmake_minimum_required(VERSION 3.16)

add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(functionsOverload)
add_subdirectory(arrays_pointers)
add_subdirectory(threads)
add_subdirectory(matrixProject)
add_subdirectory(firstClasses)
add_subdirectory(struct)
add_subdirectory(classes)
add_subdirectory(noCopyConstructor)
add_subdirectory(copyConstructor)
add_subdirectory(staticConst)
add_subdirectory(operator)
add_subdirectory(friendFuncs)
add_subdirectory(inheritance)
add_subdirectory(polymorphism)
add_subdirectory(notesApp)
add_subdirectory(stopExample)
add_subdirectory(iterators)